--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ keep_files:
 # Site settings
 title: Emerging Technology Trust(ETT)
 subtitle: "A free HTML5 agency template"
-url: "http://ettindia.com" # the base hostname & protocol for your site
+url: "http://ettindia.org" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 baseurl: ""
 cover: "/assets/cover.png"
