--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ url: "http://ettindia.org" # the base hostname & protocol for your site
 baseurl: ""
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
+permalink: /blogs/:title
 
 # Build settings
 markdown: kramdown
